--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="container">
       <div class="nav">
         <div class="brand">
-          <div class="logo">AB</div>
+          <a class="logo" href="/" onclick="router()">AB</a>
           <div>
             <div style="font-weight: 700">Atelierul de broderie</div>
             <div style="font-size: 12px; color: var(--muted)">
@@ -28,6 +28,12 @@
         </div>
 
         <nav>
+          <!-- Router -->
+          <div id="root">
+            <nav id="main-nav" class="container"></nav>
+            <div id="main-page"></div>
+          </div>
+
           <ul>
             <li><a href="#products">Produse</a></li>
             <li><a href="#about">Despre noi</a></li>
@@ -36,7 +42,7 @@
         </nav>
 
         <div class="actions">
-          <button class="btn" link="Search">Login</button>
+          <a class="btn" href="/login.html" onclick="router()">Login</a>
           <button class="btn" id="shopNow">Vezi produsele</button>
         </div>
       </div>
